fixed horizontal overflow problem

--- a/styles/global/styles.scss
+++ b/styles/global/styles.scss
@@ -1,10 +1,9 @@
-
 @import "fonts";
 
-// todo how do I remove this?
 html, body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 
 //  text-rendering: optimizeLegibility;
 //  font-weight: 400;
